# BehaviorGuard

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  evaluate.py  evaluation.py  example.py  example_ml.py  pyproject.toml  reproduce.py
src/behaviorguard/: __init__.py  cli.py  evaluator.py  evaluator_ml.py  models.py  profile_manager.py  validator.py
src/behaviorguard/analyzers/: __init__.py  linguistic.py  linguistic_ml.py  semantic.py  semantic_ml.py  temporal.py  temporal_ml.py
src/behaviorguard/baselines/: __init__.py  autoencoder_baseline.py  content_safety_baseline.py  isolation_forest_baseline.py  rule_based.py
src/behaviorguard/detectors/: __init__.py  mitigating_factors.py  red_flags.py
src/behaviorguard/scorers/: __init__.py  composite.py
src/behaviorguard/utils/: __init__.py  cold_start.py  confidence.py  monitoring.py  operation_risk_classifier.py  output_formatter.py  policy_engine.py  profile_store.py  rationale.py  risk_classifier.py
tests/: __init__.py  test_composite_scorer.py  test_ema.py  test_evaluation_build_profile.py  test_evaluation_fixes.py  test_integration.py  test_linguistic_analyzer.py  test_message_record.py  test_operation_risk_classifier.py  test_override_conditions.py  test_semantic_analyzer.py  test_temporal_analyzer.py  test_validator.py
