[tool.poetry]
name = "behaviorguard"
version = "1.0.0"
description = "BehaviorGuard Anomaly Scoring System - AI security agent for detecting behavioral anomalies"
authors = ["BehaviorGuard Team"]
readme = "README.md"
packages = [{include = "behaviorguard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.0"
hypothesis = "^6.92.0"
sentence-transformers = "^2.2.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
datasets = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
black = "^23.12.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/behaviorguard --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
